# civik_sutra

./: .env.example  .firebaserc  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.api  README.md  SECURITY.md  cloudbuild.yaml  firebase.json  firestore.rules  linkedin_post.md  nginx.conf
.cursor/: settings.json
docs/: ARCHITECTURE.md  DATA_FLOW.md  PLAN.md  PROMPT_JOURNEY.md  PROMPT_LOG.md  feature-assistant-chat.md  feature-booth-finder.md  feature-candidate-intelligence.md  feature-manifesto-comparison.md  feature-multilingual.md  feature-voter-readiness.md  load-testing.md
frontend/: .env.example  .prettierignore  eslint.config.js  index.html  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
functions/: main.py  pyproject.toml  requirements.txt
functions/src/: __init__.py  app.py
functions/src/api/: __init__.py  assistant.py  booth.py  candidate.py  manifesto.py
functions/src/data/: election_timeline.py  faq_corpus.py
functions/src/middleware/: security.py
functions/src/models/: __init__.py  booth.py  candidate.py  chat.py  manifesto.py
functions/src/services/: __init__.py  analytics_service.py  candidate_service.py  chat_service.py  eligibility_service.py  geo_service.py  input_sanitiser.py  manifesto_service.py  nl_service.py  scraper_service.py  translation_service.py  vertex_service.py
functions/tests/: conftest.py  test_analytics_service.py  test_assistant_api.py  test_booth_api.py  test_candidate_service.py  test_chat_coverage.py  test_chat_service.py  test_container.py  test_coverage_boost.py  test_eligibility_service.py  test_geo_service.py  test_geo_service_mock.py  test_input_sanitiser.py  test_input_validation.py  test_manifesto_service.py  test_nl_service.py  test_scraper_service.py  test_security_middleware.py  test_translation_service.py  test_vertex_service.py
infra/: main.tf  (+2 more)
(+57 files in other folders)
