[project]
name = "civiksutra-functions"
version = "0.1.0"
description = "Firebase Cloud Functions for CivikSutra."
requires-python = ">=3.12,<3.13"
dependencies = [
    "firebase-functions>=0.4.3",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 75
show_missing = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["D100", "D104", "D105", "D107", "D203", "D212", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D101", "D102", "D103", "D106"]
"main.py" = ["E402", "I001"]

[tool.ruff.lint.isort]
length-sort = true
known-first-party = ["src"]
